--- a/styles/l33t/intrabox/intrabox.css
+++ b/styles/l33t/intrabox/intrabox.css
@@ -9,6 +9,18 @@
 	border-left: 4px solid #000000;
 	border-right: 4px solid #000000
 }
+.upbutton {
+	background: url(/www/pics/up.gif) center no-repeat;
+}
+.dnbutton {
+	background: url(/www/pics/down.gif) center no-repeat;
+}
+.mnbutton {
+	background: url(/www/pics/min.gif) center no-repeat;
+}
+.rmbutton {
+	background: url(/www/pics/close.gif) center no-repeat;
+}
 @extend
 .boxcontent {
 	color: #ffffff;
