--- a/styles/light/intrabox/intrabox.css
+++ b/styles/light/intrabox/intrabox.css
@@ -6,14 +6,14 @@
 	border-right: 4px solid white;
 }
 .upbutton {
-	background: url(/www/pics/up.gif);
+	background: url(/www/pics/up.gif) center no-repeat;
 }
 .dnbutton {
-	background: url(/www/pics/down.gif);
+	background: url(/www/pics/down.gif) center no-repeat;
 }
 .mnbutton {
-	background: url(/www/pics/min.gif);
+	background: url(/www/pics/min.gif) center no-repeat;
 }
 .rmbutton {
-	background: url(/www/pics/close.gif);
+	background: url(/www/pics/close.gif) center no-repeat;
 }
